#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([aes], [1.0], [tylercamp@utexas.edu])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/AES.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE

# Checks for library functions.

AC_OUTPUT(Makefile src/Makefile lib/Makefile tests/Makefile)

